# FFmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bochao/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  SaoZhuFFmpeg.cpp  SaoZhuFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/bochao/ffmpeg/: CameraSurfaceViewShowActivity.java  MainActivity.java  MapViewActivity.java  SaoZhuPlayer.java
app/src/main/java/com/bochao/ffmpeg/utils/: PermissionUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_live.xml  activity_main.xml  activity_map.xml  live_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/bochao/ffmpeg/: ExampleUnitTest.java
